--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                          <p class="lead font-weight-normal">4.Who is your favorite Valorant player</p>
                        <div class="form-check my-2 text-white-50">
                             <input type="radio" name="q4" value="A" >
-                   <label class="form-check-label">Schnipsel</label>
+                   <label class="form-check-label">Tenz</label>
                </div>
                <div class="form-check my-2 text-white-50">
                 <input type="radio" name="q4" value="B"   >
